@@ -11,6 +11,7 @@
 	- ULists::votelist: Added first character selection
 	- Added advanced page-browsing tabs to threads
 	- Added notes field to the user VN list
+	- Added vnlists.status filter to /u+/list
 
 2.15 - 2010-12-15
 	- Removed expand/collapse from history browser and /u+/posts and switched to
